Address review suggestions